Add workout set notes

--- a/src/WorkoutSetHistory.scss
+++ b/src/WorkoutSetHistory.scss
@@ -1,3 +1,15 @@
 .workout-set-history__set {
   margin-top: 2rem;
+
+  &__notes {
+    font-style: italic;
+
+    &:before {
+      content: '"';
+    }
+
+    &:after {
+      content: '"';
+    }
+  }
 }
