--- a/src/WorkoutSetHistory.scss
+++ b/src/WorkoutSetHistory.scss
@@ -3,6 +3,9 @@
 
   &__notes {
     font-style: italic;
+    font-size: .9rem;
+    color: grey;
+    margin: 0;
 
     &:before {
       content: '"';
